# synapse

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TASK.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: main.rs
docs/development/: build-system.md
docs/features/: clipboard-monitoring.md  system-tray.md
docs/ui/: desktop-layout.md
frontend/: Cargo.toml  Dioxus.toml  build.rs
frontend/public/: theme.css
frontend/src/: main.rs
frontend/src/components/: mod.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tools/icon-generator/: Cargo.toml
tools/icon-generator/src/: main.rs
