[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
arboard = "3"
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0.5"
