[package]
name = "frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-logger = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
